--- a/docker/Dockerfile.celery
+++ b/docker/Dockerfile.celery
@@ -1,7 +1,5 @@
 FROM python:3.11-alpine
 
-# MAINTAINER Jookies LTD <jasmin@jookies.net>
-
 # add our user and group first to make sure their IDs get assigned consistently, regardless of whatever dependencies get added
 RUN addgroup -S jasmin && adduser -S -g jasmin jasmin
 
@@ -64,10 +62,8 @@ RUN sed -i "/\[amqp-broker\]/a host=$AMQP_BROKER_HOST" ${CONFIG_PATH}/jasmin.cfg
 EXPOSE 2775 8990 1401 8080
 VOLUME ["/var/log/jasmin", "/etc/jasmin", "/etc/jasmin/store"]
 
-COPY docker/restapi-docker-entrypoint.sh /docker-entrypoint.sh
-COPY docker/celery-entrypoint.sh /celery.sh
-# ENTRYPOINT [ "/celery.sh" ]
-ENTRYPOINT ["/docker-entrypoint.sh"]
-CMD ["jasmind.py", "--enable-interceptor-client", "--enable-dlr-thrower", "--enable-dlr-lookup", "-u", "jcliadmin", "-p", "jclipwd"]
-# Notes:
-# - jasmind is started with native dlr-thrower and dlr-lookup threads instead of standalone processes
+COPY docker/celery-entrypoint.sh /docker-entrypoint.sh
+# RUN chmod +x /docker-entrypoint.sh
+# ENTRYPOINT ["/docker-entrypoint.sh"]
+
+CMD ["celery", "-A", "jasmin.protocols.rest.tasks", "worker", "-l", "INFO", "-c", "4", "--autoscale=10,3"]
