--- a/docker/Dockerfile.restapi
+++ b/docker/Dockerfile.restapi
@@ -1,7 +1,5 @@
 FROM python:3.11-slim-bullseye
 
-MAINTAINER Jookies LTD <jasmin@jookies.net>
-
 # add our user and group first to make sure their IDs get assigned consistently, regardless of whatever dependencies get added
 RUN groupadd -r jasmin && useradd -r -g jasmin jasmin
 
@@ -52,10 +50,10 @@ ENV REDIS_CLIENT_HOST 'redis'
 ENV REDIS_CLIENT_PORT 6379
 
 # For RestAPI MODE
-ENV RESTAPI_MODE 0
-ENV RESTAPI_OLD_HTTP_HOST '127.0.0.1'
+# ENV RESTAPI_MODE 0
+# ENV RESTAPI_OLD_HTTP_HOST '127.0.0.1'
 
-ENV ENABLE_PUBLISH_SUBMIT_SM_RESP 0
+# ENV ENABLE_PUBLISH_SUBMIT_SM_RESP 0
 
 # Change binding host for jcli
 RUN sed -i '/\[jcli\]/a bind=0.0.0.0' ${CONFIG_PATH}/jasmin.cfg
